<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:id="@+id/tit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/musicBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:src="@drawable/volume"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/disclamerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_toLeftOf="@+id/view1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:src="@drawable/disclaimer" />

            <com.adsoft.girls_tatoos_gallery.CustomTextView
                android:id="@+id/disclamerTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Disclaimer"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="0.5dp"
            android:layout_height="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/reviewLayout"
            android:background="@color/text_color"></View>

        <LinearLayout
            android:id="@+id/reviewLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:src="@drawable/review_icon" />

            <com.adsoft.girls_tatoos_gallery.CustomTextView
                android:id="@+id/reviewTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Review"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                android:layout_gravity="center"/>

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/imgBanner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tit"
        android:orientation="vertical" />

    <RelativeLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/playlayout"
        android:layout_below="@+id/imgBanner1"
        android:orientation="vertical">

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            custom:auto_cycle="true"
            custom:indicator_visibility="visible"
            custom:pager_animation="Accordion"
            custom:pager_animation_span="1100" />


        <GridView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2.5dp"
            android:cacheColorHint="#00000000"
            android:numColumns="2"

            android:visibility="gone"

            ></GridView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/playlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lll"
        android:layout_marginTop="2dp"
        android:gravity="center|center_vertical">

        <ImageView
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/left" />

        <ImageView
            android:id="@+id/playimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:src="@drawable/play" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:src="@drawable/right" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"

            android:weightSum="2.5">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView

                    android:id="@+id/shareBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share"
                    android:text="Share" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <ImageView

                    android:id="@+id/wallBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wallpaper" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.5"

                android:orientation="vertical">

                <ImageView

                    android:id="@+id/saveBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/download" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.5"

                android:gravity="center"

                android:orientation="vertical">

                <ImageView

                    android:id="@+id/gridBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/grid"
                    android:text="Share" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">


                <ImageView

                    android:id="@+id/moreapp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/moreapp"
                    android:text="moreapp" />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"

            android:weightSum="2.5">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">


                <com.adsoft.girls_tatoos_gallery.CustomTextView
                    android:id="@+id/sharetxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/share"
                    android:textColor="@color/text_color"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <com.adsoft.girls_tatoos_gallery.CustomTextView
                    android:id="@+id/wallpapertxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/wall"
                    android:textColor="@color/text_color"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.5"

                android:orientation="vertical">


                <com.adsoft.girls_tatoos_gallery.CustomTextView
                    android:id="@+id/downtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="4dp"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/download"
                    android:textColor="@color/text_color"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.5"

                android:gravity="center"

                android:orientation="vertical">

                <com.adsoft.girls_tatoos_gallery.CustomTextView
                    android:id="@+id/gridtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/grid"
                    android:textColor="@color/text_color"
                    android:textSize="13sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.5"

                android:gravity="center"

                android:orientation="vertical">

                <com.adsoft.girls_tatoos_gallery.CustomTextView
                    android:id="@+id/moreapptxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/more_apps"
                    android:textColor="@color/text_color"
                    android:textSize="13sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
